k8s/k8s-azure-block-test.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sazureblocktest
spec:
  crd:
    spec:
      names:
        kind: K8sAzureBlocktest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sazureblocktest

        violation[{"msg": msg}] {
          obj := input.review.object
          is_test_namespace(obj.metadata)
          not is_allowed(obj)
          msg := sprintf("Usage of the test namespace is not allowed, name: %v, kind: %v", [obj.metadata.name, obj.kind])
        }

        is_test_namespace(metadata) {
          not metadata.namespace
        }

        is_test_namespace(metadata) {
          metadata.namespace == "test"
        }

        is_allowed(obj) {
          obj.kind == "ServiceAccount"
          obj.metadata.name == "test"
        }

        is_allowed(obj) {
          obj.kind == "Secret"
          obj.type == "kubernetes.io/service-account-token"
          obj.metadata.annotations["kubernetes.io/service-account.name"] == "test"
        }

        is_allowed(obj) {
          obj.kind == "Service"
          obj.metadata.name == "kubernetes"
        }

        is_allowed(obj) {
          obj.kind == "ConfigMap"
          obj.metadata.name == "kube-root-ca.crt"
        }
